--- a/style.css
+++ b/style.css
@@ -83,6 +83,12 @@ body, html {
     margin-bottom: 20px;
 }
 
+.cont-arts a {
+    display: block;
+    justify-items: center;
+
+}
+
 .cont-cat img {
     max-width: 70%;
     height: auto;
@@ -115,11 +121,29 @@ body, html {
     flex-direction: column;
 }
 
-.cont-projects img {
+.cont-projects .projects-pinble img {
     max-width: 50%;
     border-radius: 10px;
-    margin-top: 10px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    margin: 10px auto;
+    display: block;
+}
+
+.cont-projects .projects-aliensplease img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin: 10px auto;
+    display: block;
+}
+
+.cont-projects .projects-moontalk img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin: 10px auto;
+    display: block;
+}
+.cont-projects .projects-purrgy img {
+    max-width: 100%;
+    border-radius: 10px;
+    margin: 10px auto;
+    display: block;
 }
