--- a/style.css
+++ b/style.css
@@ -1,13 +1,31 @@
+@font-face {
+    font-family: 'Myriad Apple';
+    src: url(font/MYRIADAT.TTF) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 :root {
     /* cores */
-    --bg-color: #ffffff;
+    --w: #ffffff;
+    --button: #2387d8;
 }
 
 body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-color: var(--bg-color);
+    background-image: url(images/bg.jpg);
+    background-size: 100%;
+    font-family: "Myriad Apple", sans-serif;
+}
+
+body, html p, h1, h2, h3 {
+    color: var(--w)
+}
+
+body, html a {
+    color: var(--button)
 }
 
 *, *::before, *::after {
@@ -25,7 +43,6 @@ body, html {
 .cont-projects {
     margin: 20px auto;
     padding: 20px;
-    border: 2px solid;
     border-radius: 25px;
     max-width: 900px;
     width: 50%;
@@ -34,6 +51,7 @@ body, html {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    background-image: linear-gradient(#6b6b6b, #2c2c2c);
 }
 
 .cont-aboutme {
