--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     /* cores */
     --w: #ffffff;
     --button: #2387d8;
+    --gradient-start: #535557e6;
+    --gradient-end: #0e0f0fe6;
 }
 
 body, html {
@@ -51,7 +53,7 @@ body, html a {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    background-image: linear-gradient(#6b6b6b, #2c2c2c);
+    background-image: linear-gradient(180deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
 }
 
 .cont-aboutme {
@@ -60,6 +62,11 @@ body, html a {
 
 .cont-aboutme p {
     margin: 5px 0;
+}
+
+.blank {
+    margin-bottom: 20px;
+    opacity: 0;
 }
 
 /* image grids */
