--- a/main/style.css
+++ b/main/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Myriad Apple';
-    src: url(../font/MYRIADAT.TTF) format('truetype');
+    font-family: 'Pixeloid Sans';
+    src: url(../font/PixeloidSans-mLxMm.ttf) format('truetype');
     font-weight: normal;
     font-style: normal;
 }
@@ -17,12 +17,13 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: url(../images/bg.jpg);
+    background-image: url(../images/bg.png);
     background-size: 100%;
-    font-family: "Myriad Apple", sans-serif;
+    font-family: "Pixeloid Sans", sans-serif;
 }
 
-body, html p, h1, h2, h3 {
+
+body, html p, h1, h2, h3, h6 {
     color: var(--w)
 }
 
@@ -34,9 +35,15 @@ body, html a {
     box-sizing: border-box;
 }
 
+.cont-aboutme h6 {
+    margin-top: -15px;
+    margin-bottom: 5px;
+}
+
 /* containters */
 .cont-intro,
 .cont-aboutme,
+.cont-stuffilike,
 .cont-howitstarted,
 .cont-social,
 .cont-code,
@@ -45,7 +52,7 @@ body, html a {
 .cont-projects {
     margin: 20px auto;
     padding: 20px;
-    border-radius: 25px;
+    border-radius: 15px;
     max-width: 900px;
     width: 50%;
     display: flex;
@@ -60,6 +67,11 @@ body, html a {
     align-items: flex-start;
 }
 
+.cont-stuffilike {
+    align-items: center;
+    justify-content: center;
+}
+
 .cont-aboutme p {
     margin: 5px 0;
 }
@@ -67,6 +79,14 @@ body, html a {
 .blank {
     margin-bottom: 20px;
     opacity: 0;
+}
+
+/* buttons */
+
+.cont-aboutme button,
+.cont-projects button,
+.cont-stuffilike button {
+    cursor: pointer;
 }
 
 /* image grids */
@@ -90,6 +110,13 @@ body, html a {
     margin-bottom: 20px;
 }
 
+.cont-aboutme img {
+    align-items: right;
+    max-width: 165px;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
 /* estilos */
 .cont-projects {
     text-align: center;
@@ -123,6 +150,7 @@ body, html a {
 
 /* social media links */
 .cont-social a,
+.cont-aboutme a,
 .cont-projects a {
     margin: 10px 0;
     color: inherit;
