--- a/style.css
+++ b/style.css
@@ -117,6 +117,12 @@ body, html a {
     color: var(--b);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
+    background-image: url('/images/icon_bluesky.png');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 8px center;
+    text-align: left;
+    padding-left: 32px;
 }
 
 .btn-tg button {
@@ -128,6 +134,12 @@ body, html a {
     color: var(--b);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
+    background-image: url('/images/icon_telegram.webp');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 8px center;
+    text-align: left;
+    padding-left: 32px;
 }
 
 .btn-rd button {
@@ -139,6 +151,12 @@ body, html a {
     color: var(--b);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
+    background-image: url('/images/icon_reddit.png');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 8px center;
+    text-align: left;
+    padding-left: 32px;
 }
 
 .btn-px button {
@@ -150,6 +168,12 @@ body, html a {
     color: var(--w);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
+    background-image: url('/images/icon_pixilart.png');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 8px center;
+    text-align: left;
+    padding-left: 32px;
 }
 
 .btn-gh button {
@@ -161,6 +185,12 @@ body, html a {
     color: var(--w);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
+    background-image: url('/images/icon_github.png');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 8px center;
+    text-align: left;
+    padding-left: 32px;
 }
 
 .btn-twt button {
@@ -172,6 +202,12 @@ body, html a {
     color: var(--w);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
+    background-image: url('/images/icon_twitter.png');
+    background-repeat: no-repeat;
+    background-size: 16px 16px;
+    background-position: 8px center;
+    text-align: left;
+    padding-left: 32px;
 }
 
 .btn-bsk button:hover {
