--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body, html {
     font-family: "Pixeloid Sans", sans-serif;
 }
 
-body, html p, h1, h2, h3, h6 {
+body, html p, h1, h2, h3, h5, h6 {
     color: var(--w);
 }
 
@@ -59,6 +59,7 @@ body, html a {
 .cont-code,
 .cont-arts,
 .cont-cat,
+.cont-games,
 .cont-projects {
     margin: 20px auto;
     padding: 20px;
@@ -95,10 +96,12 @@ body, html a {
     opacity: 0;
 }
 
+
 /* buttons */
 .cont-aboutme button,
 .cont-projects button,
-.cont-stuffilike button {
+.cont-stuffilike button,
+.cont-social button {
     cursor: pointer;
     background-image: linear-gradient(144deg, var(--btn-gradient-start) 30%, var(--btn-gradient-end) 100%);
     border-radius: 5px;
@@ -240,8 +243,6 @@ body, html a {
     color: var(--twt);
 }
 
-
-
 /* image grids */
 .arts-grid, .cat-grid {
     display: grid;
@@ -327,6 +328,7 @@ body, html a {
     .cont-aboutme,
     .cont-howitstarted,
     .cont-social,
+    .cont-games,
     .cont-stuffilike,
     .cont-code,
     .cont-arts,
