--- a/style.css
+++ b/style.css
@@ -74,6 +74,30 @@ body, html a {
     background-image: linear-gradient(180deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
 }
 
+.boxes {
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 15px;
+    width: 90%;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center; 
+    box-sizing: border-box;
+    background-image: linear-gradient(180deg, var(--gradient-start) 0%, var(--gradient-end) 100%);
+    display: flex;
+    flex-wrap: wrap; 
+    height: auto;
+    max-width: 500px; 
+}
+
+.boxes img {
+    margin: 5px;
+    display: block;
+    width: calc(20% - 10px);
+    box-sizing: border-box;
+}
+
+  
 .cont-aboutme {
     align-items: flex-start;
 }
@@ -109,6 +133,20 @@ body, html a {
     padding: 8px;
     color: var(--w);
     font-family: "Pixeloid Sans", sans-serif;
+}
+
+#backToTop {
+    cursor: pointer;
+    background-image: linear-gradient(144deg, var(--btn-gradient-start) 30%, var(--btn-gradient-end) 100%);
+    border-radius: 5px;
+    border: none;
+    padding: 8px;
+    color: var(--w);
+    font-family: "Pixeloid Sans", sans-serif;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;   
 }
 
 .btn-bsk button {
