--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    background-image: url(images/bg.webp);
+    background-image: url(images/bg.png);
     background-size: 100%;
     font-family: "Pixeloid Sans", sans-serif;
 }
@@ -108,6 +108,7 @@ body, html a {
 }
 
 .cont-stuffilike img {
+    width: 80%;
     border-radius: 5px;
 }
 
@@ -135,6 +136,7 @@ body, html a {
     font-family: "Pixeloid Sans", sans-serif;
 }
 
+
 #backToTop {
     cursor: pointer;
     background-image: linear-gradient(144deg, var(--btn-gradient-start) 30%, var(--btn-gradient-end) 100%);
@@ -158,7 +160,7 @@ body, html a {
     color: var(--b);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
-    background-image: url('/images/icon_bluesky.png');
+    background-image: url('images/icons/icon_bluesky.png');
     background-repeat: no-repeat;
     background-size: 16px 16px;
     background-position: 8px center;
@@ -175,7 +177,7 @@ body, html a {
     color: var(--b);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
-    background-image: url('/images/icon_telegram.webp');
+    background-image: url('images/icons/icon_telegram.png');
     background-repeat: no-repeat;
     background-size: 16px 16px;
     background-position: 8px center;
@@ -192,7 +194,7 @@ body, html a {
     color: var(--b);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
-    background-image: url('/images/icon_reddit.png');
+    background-image: url('images/icons/icon_reddit.png');
     background-repeat: no-repeat;
     background-size: 16px 16px;
     background-position: 8px center;
@@ -209,7 +211,7 @@ body, html a {
     color: var(--w);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
-    background-image: url('/images/icon_pixilart.png');
+    background-image: url('images/icons/icon_pixilart.png');
     background-repeat: no-repeat;
     background-size: 16px 16px;
     background-position: 8px center;
@@ -226,7 +228,7 @@ body, html a {
     color: var(--w);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
-    background-image: url('/images/icon_github.png');
+    background-image: url('images/icons/icon_github.png');
     background-repeat: no-repeat;
     background-size: 16px 16px;
     background-position: 8px center;
@@ -243,7 +245,7 @@ body, html a {
     color: var(--w);
     transition-duration: 0.4s;
     font-family: "Pixeloid Sans", sans-serif;
-    background-image: url('/images/icon_twitter.png');
+    background-image: url('images/icons/icon_twitter.png');
     background-repeat: no-repeat;
     background-size: 16px 16px;
     background-position: 8px center;
