--- a/ash.css
+++ b/ash.css
@@ -109,7 +109,7 @@ body {
   padding: 2rem;
   border-radius: 1rem;
   text-align: center;
-  min-height: auto;
+  min-height: 120px;
   margin-bottom: 1rem;
 }
 
