added collections page and fixed some stuff

--- a/ash.css
+++ b/ash.css
@@ -102,6 +102,9 @@ body {
   margin: 0 auto;
 }
 
+.collection {
+  width: 100%;
+}
 /* ===== Profile Card ===== */
 .profile-card {
   position: relative;
